# sample-chatbot

./: .dockerignore  .env.production  .env.uat  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
controllers/: __init__.py  chatbot_controller.py  crawler_controller.py  evaluation_controller.py
data/finance/: financial_faq.csv
data/knowledge/: policy_overview.md
data/tender/: tender_drafting_guide.md
data/web_samples/: finance_updates.html  policy_portal.html  tender_hub.html
routers/: __init__.py  chatbot_router.py  crawler_router.py  evaluation_router.py
scripts/: start-with-ollama.sh
tests/: test_api.py
utils/: config.py  costs.py  data_ingestion.py  embeddings.py  evaluation.py  identifiers.py  llm.py  rag.py  schemas.py  timing.py  vectorstore.py
