[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-chatbot"
version = "0.1.0"
description = "Enterprise-ready RAG chatbot with evaluation and data ingestion capabilities"
authors = [{ name = "Fairoza Amira" }]
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.25.0",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchainhub==0.1.17",
    "langchain-experimental==0.0.55",
    "langchain-openai==0.1.7",
    "chromadb==0.5.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "deepeval==0.20.63",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "sentence-transformers==2.3.1",
    "torch==2.2.2+cpu",
    "torchvision==0.17.2+cpu",
    "pypdf==3.17.4",
    "beautifulsoup4==4.12.3",
    "requests==2.31.0"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2"
]

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2"
]

[tool.setuptools.packages.find]
include = ["sample_chatbot*"]

[tool.setuptools.package-data]
sample_chatbot = ["py.typed"]
